force-app/main/default/objects/Code_Parameter__mdt/Code_Parameter__mdt.object-meta.xml
<CustomObject>
    <description>Values used by Apex or Lightning code</description>
    <label>Code Parameter</label>
    <pluralLabel>Code Parameters</pluralLabel>
</CustomObject>