force-app/main/default/objects/Code_Parameter__mdt/fields/PickListValue__c.field-meta.xml
<CustomField>
    <fullName>PickListValue__c</fullName>
    <description>Stores Field Name</description>
    <inlineHelpText>Stores Field Name</inlineHelpText>
    <label>PickList Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>