force-app/main/default/objects/Code_Parameter__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Usually will be name/value pairs. Each pair on a line and separated by a colon</description>
    <inlineHelpText>Usually will be name/value pairs. Each pair on a line and separated by a colon</inlineHelpText>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>