force-app/main/default/objects/Code_Parameter__mdt/fields/Values_Text__c.field-meta.xml
<CustomField>
    <fullName>Values_Text__c</fullName>
    <description>Field can be referenced in formula fields</description>
    <label>Values Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>